--- a/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
+++ b/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
@@ -224,16 +224,15 @@ price_gen_t0 <- function(choice_t0,
   return(output) 
 }
 
-## Generate Prior Firm
 
+## Generate Prior Firm
 prior_firm_t0 <- expand.grid(i = 1:N) %>% 
   tibble::as_tibble() %>% 
-  dplyr::mutate(prior_firm = sample(1:4, size = N, replace = T, prob = c(0, 0.4, 0.35, 0.25)))
+  dplyr::mutate(prior_firm = sample(1:3, size = N, replace = T, prob = c(0.4, 0.35, 0.25)))
 
 
 ## True Parameters
 ### Inertia
-
 eta_f <- c(5, 1, 2, 2)
 xi <- c(1, -2.5)
 
@@ -245,8 +244,8 @@ beta <- 20
 ### Risk Aversion
 risk_aversion <- 10^(-4)
 
-## Generate Choice
 
+## Generate Choice
 choice_t0 <- expand.grid(i = 1:N, d = 1:D, t = 0) %>% 
   tibble::as_tibble() %>% 
   dplyr::mutate(m = ifelse(d == 1, 1, 0),
@@ -261,7 +260,7 @@ choice_t0 <- expand.grid(i = 1:N, d = 1:D, t = 0) %>%
   dplyr::left_join(prior_firm_t0, by = c("i")) %>% 
   dplyr::mutate(inertia = eta_f[1] + eta_f[2]*x_1 + eta_f[3]*x_2 + eta_f[4]*x_3,
                 monitoring_disutility = xi[1] + xi[2]*log(lambda),
-                demand_friction = ifelse(d == prior_firm, 0, inertia) + 
+                demand_friction = ifelse(f == prior_firm, 0, inertia) + 
                   ifelse(d == 1, monitoring_disutility, 0)) %>% 
   dplyr::mutate(E_R_s = ifelse(m == 0, 
                            (alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2) / beta,
@@ -612,9 +611,6 @@ cal_v <- function(df, theta, cost_par, R, lambda){
   l0 <- cost_par[13]
   a_l <- cost_par[14]
   
-  ## Lambda
-  lambda <- lambda
-  
   # Price
   price <- df$price * matrix(rep(1, dim(df)[1] * R), nrow = dim(df)[1])
   colnames(price) <- c(paste("price", 1:R, sep = "_"))
@@ -625,7 +621,7 @@ cal_v <- function(df, theta, cost_par, R, lambda){
   # Generate Demand Friction
   demand_friction <- lambda %>% 
     dplyr::mutate_at(vars(starts_with("lambda")),
-                     funs(ifelse(d == prior_firm, 
+                     funs(ifelse(f == prior_firm, 
                                  0,  
                                  eta_f[1] + eta_f[2]*x_1 + eta_f[3]*x_2 + eta_f[4]*x_3) 
                           + ifelse(d == 1 & t == 0, 
@@ -921,63 +917,7 @@ Using our demand estimates, we evaluate the impact that the monitoring program h
 |1    |4    |0    |2    |95   |0.05         |...|0.03         |...|0.35     |...|0.30     |
 |2    |1    |0    |1    |130  |0.02         |...|0.01         |...|0.15     |...|0.20     |
 
-- Next, we simulate $K \in \mathbb{N}^{+}$ draws of first-period claim occurrence and monitoring score based on private risk for each $\lambda$ (thus we simulate $L \times K$ claims and monitoiring score in total)
 
-|i    |d    |t    |$\lambda_{1}$|...|$\lambda_{L}$|$Claim_{11}$|...|$Claim_{LK}$|$Score_{11}$|...|$Score_{LK}$|
-|:---:|:---:|:---:|:-----------:|:-:|:-----------:|:----------:|:-:|:----------:|:----------:|:-:|:----------:|
-|1    |1    |0    |0.05         |...|0.03         |0           |...|1           |-3.0        |...|-1.0        |
-|1    |2    |0    |0.05         |...|0.03         |0           |...|0           |0.0         |...|0.0         |
-|1    |3    |0    |0.05         |...|0.03         |1           |...|0           |0.0         |...|0.0         |
-|1    |4    |0    |0.05         |...|0.03         |0           |...|0           |0.0         |...|0.0         |
-|2    |1    |0    |0.02         |...|0.01         |2           |...|0           |-2.5        |...|-1.2        |
-
-- Based on each claim and monitoring score, renewal price multiplier $R_{0}$ is calculated
-
-|i    |d    |t    |$R_{C, 11}$|...|$R_{C, LK}$|$R_{s, 11}$|...|$R_{s, LK}$|$R_{0, 11}$|...|$R_{0, LK}$|
-|:---:|:---:|:---:|:---------:|:-:|:---------:|:---------:|:-:|:---------:|:---------:|:-:|:---------:|
-|1    |1    |0    |0.98       |...|1.20       |0.99       |...|0.95       |0.97       |...|1.15       |
-|1    |2    |0    |0.98       |...|0.98       |1.02       |...|0.98       |1.00       |...|0.96       |
-|1    |3    |0    |1.20       |...|0.98       |1.02       |...|0.98       |1.22       |...|0.96       |
-|1    |4    |0    |0.98       |...|0.98       |1.02       |...|0.98       |1.00       |...|0.96       |
-|2    |1    |0    |1.20       |...|0.98       |0.87       |...|0.90       |1.07       |...|0.88       |
-
-- Renewal price itself is expanded to the following table:
-
-|i    |d    |t    |Prior|Prior_Price|$R_{0, 11}$|...|$R_{0, LK}$|$Price_{11}$|...|$Price_{LK}$|
-|:---:|:---:|:---:|:---:|:---------:|:---------:|:-:|:---------:|:----------:|:-:|:----------:|
-|1    |1    |1    |1    |100        |0.97       |...|1.15       |97          |...|115         |
-|1    |2    |1    |1    |90         |0.97       |...|1.15       |87          |...|105         |
-|1    |3    |1    |1    |95         |0.97       |...|1.15       |92          |...|105         |
-|1    |1    |1    |2    |110        |1.00       |...|0.96       |110         |...|105         |
-|1    |2    |1    |2    |90         |1.00       |...|0.96       |90          |...|85          |
-|1    |3    |1    |2    |95         |1.00       |...|0.96       |95          |...|90          |
-|1    |1    |1    |3    |110        |1.22       |...|0.96       |130         |...|105         |
-|1    |2    |1    |3    |90         |1.22       |...|0.96       |110         |...|85          |
-|1    |3    |1    |3    |95         |1.22       |...|0.96       |115         |...|90          |
-|1    |1    |1    |4    |110        |1.00       |...|0.96       |110         |...|105         |
-|1    |2    |1    |4    |90         |1.00       |...|0.96       |90          |...|85          |
-|1    |3    |1    |4    |95         |1.00       |...|0.96       |95          |...|90          |
-|2    |1    |1    |1    |130        |1.07       |...|0.88       |137         |...|105         |
-
-- Finally we calculate choice probability in $t = 1$ based on each renewal price and $\lambda$ in $t = 1$. Note that $\lambda$ in $t = 1$ is different from that of $t = 0$, and hence we need to draw again
-
-|i    |d    |t    |Prior|$Price_{11}$|...|$Price_{LK}$|$\lambda_{1}$|...|$\lambda_{L}$|...|$\Pr_{11}$|...|$\Pr_{LK}$|
-|:---:|:---:|:---:|:---:|:----------:|:-:|:----------:|:-----------:|:-:|:-----------:|:-:|:--------:|:-:|:--------:|
-|1    |1    |1    |1    |97          |...|115         |0.06         |...|0.04         |...|0.45      |...|0.40      |
-|1    |2    |1    |1    |87          |...|105         |0.06         |...|0.04         |...|0.25      |...|0.30      |
-|1    |3    |1    |1    |92          |...|105         |0.06         |...|0.04         |...|0.30      |...|0.30      |
-|1    |1    |1    |2    |110         |...|105         |0.06         |...|0.04         |...|0.25      |...|0.20      |
-|1    |2    |1    |2    |90          |...|85          |0.06         |...|0.04         |...|0.25      |...|0.40      |
-|1    |3    |1    |2    |95          |...|90          |0.06         |...|0.04         |...|0.50      |...|0.40      |
-|1    |1    |1    |3    |130         |...|105         |0.06         |...|0.04         |...|0.20      |...|0.10      |
-|1    |2    |1    |3    |110         |...|85          |0.06         |...|0.04         |...|0.35      |...|0.50      |
-|1    |3    |1    |3    |115         |...|90          |0.06         |...|0.04         |...|0.45      |...|0.40      |
-|1    |1    |1    |4    |110         |...|105         |0.06         |...|0.04         |...|0.55      |...|0.30      |
-|1    |2    |1    |4    |90          |...|85          |0.06         |...|0.04         |...|0.15      |...|0.30      |
-|1    |3    |1    |4    |95          |...|90          |0.06         |...|0.04         |...|0.35      |...|0.40      |
-|2    |1    |1    |1    |137         |...|105         |0.03         |...|0.07         |...|0.25      |...|0.20      |
-
-- Thus, while choice probability in $t = 0$ has $(4N \times L)$ matrix form, choice probability in $t = 1$ is $(12N \times LK)$ matrix, due to $K$ times draw of claims and monitoring score as well as path dependence of choice
 
 
 ```{r welfare calculation}
@@ -985,7 +925,7 @@ Using our demand estimates, we evaluate the impact that the monitoring program h
 L <- 100
 K <- 50
 
-## df for t = 0
+## df for t = 0, 1
 df_t0 <- df %>% 
   dplyr::filter(t == 0)
 
@@ -996,7 +936,8 @@ df_t1 <- df %>%
 sim_lambda <- gen_lambda(df, cost_par, L) %>% 
   dplyr::select(starts_with("lambda"))
 
-sim_lambda_expand <- gen_lambda(df, cost_par, L)
+sim_lambda_expand <- df %>% 
+  dplyr::bind_cols(sim_lambda)
 
 for(k in 1:(K - 1)){
   sim_lambda_expand <- dplyr::bind_cols(sim_lambda_expand, sim_lambda)
@@ -1023,36 +964,190 @@ colnames(sim_lambda_expand) <- c("i", "d", "t", "m", "f",
                                        rep(1:K, L),
                                        sep = "_"))
 
+
+## Lambda with L columns
+sim_lambda_t0 <- df %>% 
+  dplyr::bind_cols(sim_lambda) %>% 
+  dplyr::filter(t == 0)
+sim_lambda_t1 <- df %>% 
+  dplyr::bind_cols(sim_lambda) %>% 
+  dplyr::filter(t == 1)
+
+## Lambda with L * K columns
+
 sim_lambda_expand_t0 <- sim_lambda_expand %>% 
   dplyr::filter(t == 0)
 sim_lambda_expand_t1 <- sim_lambda_expand %>% 
   dplyr::filter(t == 1)
 
-## Calculate Certainty Equivalent for Each Draw
-### theta_estを入れるのが正しいが挙動確認のためthetaを入れている
-cal_certainty_equivalent <- function(df, theta, cost_par, R, lambda){
-  ## Risk Aversion
+## Calculate Choice Probability in t = 0
+sim_choice_probability_t0 <- function(df, theta, cost_par, lambda, Col){
+ # Parameters
+  eta_f <- theta[1:4]
+  xi <- theta[5:6]
+  alpha_m0 <- theta[7:9]
+  alpha_m1 <- theta[10:13]
+  beta <- theta[14]
   risk_aversion <- theta[15]
   
-  ## Calculate CE
-  ### We apply `cal_v` to obtain v
-  output <- cal_v(df, theta, cost_par, R, lambda) %>% 
-    dplyr::mutate_at(vars(starts_with("v")),
-                     funs(1 / risk_aversion - sqrt((1 / risk_aversion^2) - 2*. / risk_aversion))) %>% 
-    dplyr::rename_with(\(x) str_replace(x, "v", "certatinty_equivalent"), 
-                       starts_with("v"))
+  # Cost Parameters
+  theta_score <- cost_par[8:11]
+  sigma_score <- cost_par[12]
+  l0 <- cost_par[13]
+  a_l <- cost_par[14]
+  
+  # Price
+  price <- df$price * matrix(rep(1, dim(df)[1] * Col), nrow = dim(df)[1])
+  colnames(price) <- c(paste("price", 1:Col, sep = "_"))
+  
+  price <- data.frame(price) %>% 
+    tibble::as_tibble()  
+  
+  # Generate Demand Friction
+  demand_friction <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(ifelse(f == prior_firm, 
+                                 0,  
+                                 eta_f[1] + eta_f[2]*x_1 + eta_f[3]*x_2 + eta_f[4]*x_3) 
+                          + ifelse(d == 1 & t == 0, 
+                                   xi[1] + xi[2]*log(.), 
+                                   0))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "demand_friction"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("demand_friction"))
+  
+  # Generate E_score
+  E_score <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 exp(theta_score[1] + theta_score[2]*log(.)
+                                     + theta_score[3]*x_1 + theta_score[4]*x_2
+                                     + sigma_score^2 / 2),
+                                 0))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_score"), 
+                       starts_with("lambda"))
+  
+  # Generate E_oop
+  E_oop <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(.*exp(-.)*(l0^(a_l)/(a_l - 1))*policy_limit^(-a_l + 1))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_oop"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_oop"))
+  
+  # Generate E_oop_sq
+  E_oop_sq <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(.*exp(-.)*((2 * l0^(a_l)) / ((a_l - 1) * (a_l - 1))) * policy_limit^(-a_l + 2))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_oop_sq"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_oop_sq"))
 
+  # Generate E_R_s
+  E_R_s <- E_score %>% 
+    dplyr::mutate_at(vars(starts_with("E_score")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 (alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*.) / beta,
+                                 (alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2) / beta))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_score", "E_R_s"), 
+                       starts_with("E_score")) %>% 
+    dplyr::select(matches("E_R_s"))
+
+  # Generate E_R_s_sq
+  E_R_s_sq <- E_score %>% 
+    dplyr::mutate_at(vars(starts_with("E_score")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 (alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*.) / beta^2,
+                                 (alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2) / beta^2))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_score", "E_R_s_sq"), 
+                       starts_with("E_score")) %>% 
+    dplyr::select(matches("E_R_s_sq"))  
+  
+  # Generate E_R_C
+  E_R_C <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(0.98 * exp(-.) + 1.2 * (1 - exp(-.)))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_R_C"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_R_C"))
+
+  # Generate E_R_C_sq
+  E_R_C_sq <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(0.98^2 * exp(-.) + 1.2^2 * (1 - exp(-.)))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_R_C_sq"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_R_C_sq"))
+  
+  # Calculate E_h
+  E_h <- - price - demand_friction - E_oop - E_R_s * E_R_C * price
+  E_h <- E_h %>% 
+    dplyr::rename_with(\(x) str_replace(x, "price", "E_h"), 
+                       starts_with("price"))
+  
+  # Calculate E_h_sq
+  E_h_sq <- price^2 + demand_friction^2 + E_oop_sq + E_R_s_sq*E_R_C_sq*price^2
+  + 2*price*demand_friction + 2*price*E_oop + 2*price*(E_R_s*E_R_C*price)
+  + 2*demand_friction*E_oop + 2*demand_friction*(E_R_s*E_R_C*price)
+  + 2*E_oop*(E_R_s*E_R_C*price)
+    
+  E_h_sq <- E_h_sq %>% 
+    dplyr::rename_with(\(x) str_replace(x, "price", "E_h_sq"), 
+                       starts_with("price"))
+  
+  # Calculate v
+  v <- (E_h - (risk_aversion / 2) * E_h_sq) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_h", "v"), 
+                       starts_with("E_h"))
+  
+  ## Calculate Choice Probability
+  output <- df %>% 
+    dplyr::bind_cols(v) %>% 
+    dplyr::group_by(i, t) %>% 
+    dplyr::mutate_at(vars(starts_with("v")),
+                     funs(exp(.) / sum(exp(.)))) %>% 
+    dplyr::ungroup() %>% 
+    dplyr::rename_with(\(x) str_replace(x, "v", "choice_probability"), 
+                       starts_with("v"))
+  
   return(output)
 }
 
-sim_renewal_price <- function(df, theta, cost_par, R, lambda){
+sim_choice_probability_t0(df_t0, theta, cost_par, sim_lambda_t0, L)
+
+```
+
+- Next, we simulate $K \in \mathbb{N}^{+}$ draws of first-period claim occurrence and monitoring score based on private risk for each $\lambda$ (thus we simulate $L \times K$ claims and monitoiring score in total)
+
+|i    |d    |t    |$\lambda_{1}$|...|$\lambda_{L}$|$Claim_{11}$|...|$Claim_{LK}$|$Score_{11}$|...|$Score_{LK}$|
+|:---:|:---:|:---:|:-----------:|:-:|:-----------:|:----------:|:-:|:----------:|:----------:|:-:|:----------:|
+|1    |1    |0    |0.05         |...|0.03         |0           |...|1           |-3.0        |...|-1.0        |
+|1    |2    |0    |0.05         |...|0.03         |0           |...|0           |0.0         |...|0.0         |
+|1    |3    |0    |0.05         |...|0.03         |1           |...|0           |0.0         |...|0.0         |
+|1    |4    |0    |0.05         |...|0.03         |0           |...|0           |0.0         |...|0.0         |
+|2    |1    |0    |0.02         |...|0.01         |2           |...|0           |-2.5        |...|-1.2        |
+
+- Based on each claim and monitoring score, renewal price multiplier $R_{0}$ is calculated
+
+|i    |d    |t    |$R_{C, 11}$|...|$R_{C, LK}$|$R_{s, 11}$|...|$R_{s, LK}$|$R_{0, 11}$|...|$R_{0, LK}$|
+|:---:|:---:|:---:|:---------:|:-:|:---------:|:---------:|:-:|:---------:|:---------:|:-:|:---------:|
+|1    |1    |0    |0.98       |...|1.20       |0.99       |...|0.95       |0.97       |...|1.15       |
+|1    |2    |0    |0.98       |...|0.98       |1.02       |...|0.98       |1.00       |...|0.96       |
+|1    |3    |0    |1.20       |...|0.98       |1.02       |...|0.98       |1.22       |...|0.96       |
+|1    |4    |0    |0.98       |...|0.98       |1.02       |...|0.98       |1.00       |...|0.96       |
+|2    |1    |0    |1.20       |...|0.98       |0.87       |...|0.90       |1.07       |...|0.88       |
+
+
+```{r step2 draw cost}
+
+sim_renewal_price_multiplier <- function(df, theta, cost_par, lambda, Col){
   ## Generate Claims
   lambda_mat <- lambda %>% 
     dplyr::select(starts_with("lambda")) %>% 
     as.matrix()
   
-  claims <- matrix(rpois(dim(df)[1]*L*K, lambda = lambda_mat), nrow = dim(df)[1])
-  colnames(claims) <- paste("claims", 1:(L*K), sep = "_")
+  claims <- matrix(rpois(dim(df)[1]*Col, lambda = lambda_mat), nrow = dim(df)[1])
+  colnames(claims) <- paste("claims", 1:Col, sep = "_")
   
   claims <- data.frame(claims) %>% 
     tibble::as_tibble()  
@@ -1070,8 +1165,8 @@ sim_renewal_price <- function(df, theta, cost_par, R, lambda){
     dplyr::select(starts_with("mu_score")) %>%
     as.matrix()
   
-  score <- matrix(rlnorm(dim(df)[1]*L*K, mu_score, sigma_score), nrow = dim(df)[1])
-  colnames(score) <- paste("score", 1:(L*K), sep = "_")
+  score <- matrix(rlnorm(dim(df)[1]*Col, mu_score, sigma_score), nrow = dim(df)[1])
+  colnames(score) <- paste("score", 1:Col, sep = "_")
 
   score <- data.frame(score) %>%
     tibble::as_tibble()
@@ -1100,19 +1195,110 @@ sim_renewal_price <- function(df, theta, cost_par, R, lambda){
                                  (alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*.) / beta))) %>%
     dplyr::rename_with(\(x) str_replace(x, "score", "R_s"),
                        starts_with("score")) %>% 
-      dplyr::select(-c(m, x_1, x_2))
+    dplyr::select(-c(m, x_1, x_2))
   
-  ## Calculate Base Renewal Price
-  price <- df$price * matrix(rep(1, dim(df)[1] * L * K), nrow = dim(df)[1])
-  colnames(price) <- c(paste("price", 1:(L * K), sep = "_"))
+  # ## Calculate Base Renewal Price
+  # price <- df$price * matrix(rep(1, dim(df)[1] * L * K), nrow = dim(df)[1])
+  # colnames(price) <- c(paste("price", 1:(L * K), sep = "_"))
+  # 
+  # price <- data.frame(price) %>% 
+  #   tibble::as_tibble()
   
-  price <- data.frame(price) %>% 
-    tibble::as_tibble()
+  R_0 <- (R_C * R_s) %>%
+    dplyr::rename_with(\(x) str_replace(x, "R_C", "R_0"),
+                       starts_with("R_C"))
   
-  output <- price * R_C * R_s
-  
+  output <- df %>% 
+    dplyr::bind_cols(R_0) %>% 
+    dplyr::select(c("i", "d", matches("R_0")))
+
   return(output)
 }
+
+
+sim_renewal_price_multiplier(df_t0, theta, cost_par, sim_lambda_expand_t0, L*K)
+
+```
+
+- Renewal price itself is expanded to the following table:
+
+|i    |d    |t    |Prior|Prior_Price|$R_{0, 11}$|...|$R_{0, LK}$|$Price_{11}$|...|$Price_{LK}$|
+|:---:|:---:|:---:|:---:|:---------:|:---------:|:-:|:---------:|:----------:|:-:|:----------:|
+|1    |1    |1    |1    |100        |0.97       |...|1.15       |97          |...|115         |
+|1    |2    |1    |1    |90         |0.97       |...|1.15       |87          |...|105         |
+|1    |3    |1    |1    |95         |0.97       |...|1.15       |92          |...|105         |
+|1    |1    |1    |2    |110        |1.00       |...|0.96       |110         |...|105         |
+|1    |2    |1    |2    |90         |1.00       |...|0.96       |90          |...|85          |
+|1    |3    |1    |2    |95         |1.00       |...|0.96       |95          |...|90          |
+|1    |1    |1    |3    |110        |1.22       |...|0.96       |130         |...|105         |
+|1    |2    |1    |3    |90         |1.22       |...|0.96       |110         |...|85          |
+|1    |3    |1    |3    |95         |1.22       |...|0.96       |115         |...|90          |
+|1    |1    |1    |4    |110        |1.00       |...|0.96       |110         |...|105         |
+|1    |2    |1    |4    |90         |1.00       |...|0.96       |90          |...|85          |
+|1    |3    |1    |4    |95         |1.00       |...|0.96       |95          |...|90          |
+|2    |1    |1    |1    |130        |1.07       |...|0.88       |137         |...|105         |
+
+```{r step3 cal renewal price}
+
+prior_price <- df_t0 %>% 
+  dplyr::select(i, d, price) %>% 
+  dplyr::rename(prior_price = price)
+
+renewal_price_multiplier <- sim_renewal_price_multiplier(df_t0, theta, cost_par, sim_lambda_expand_t0, L*K)
+
+renewal_price <- expand.grid(i = 1:N, d = 1:3, t = 1, prior_choice = 1:4) %>% 
+  tibble::as_tibble() %>% 
+  dplyr::arrange(i, prior_choice) %>% 
+  dplyr::mutate(key = ifelse(d == 1 & prior_choice == 1, 1, d + 1)) %>% 
+  dplyr::left_join(prior_price, by = c("i", "key" = "d")) %>% 
+  dplyr::left_join(renewal_price_multiplier, by = c("i", "prior_choice" = "d"))
+
+```
+
+
+- Finally we calculate choice probability in $t = 1$ based on each renewal price and $\lambda$ in $t = 1$. Note that $\lambda$ in $t = 1$ is different from that of $t = 0$, and hence we need to draw again
+
+|i    |d    |t    |Prior|$Price_{11}$|...|$Price_{LK}$|$\lambda_{1}$|...|$\lambda_{L}$|...|$\Pr_{11}$|...|$\Pr_{LK}$|
+|:---:|:---:|:---:|:---:|:----------:|:-:|:----------:|:-----------:|:-:|:-----------:|:-:|:--------:|:-:|:--------:|
+|1    |1    |1    |1    |97          |...|115         |0.06         |...|0.04         |...|0.45      |...|0.40      |
+|1    |2    |1    |1    |87          |...|105         |0.06         |...|0.04         |...|0.25      |...|0.30      |
+|1    |3    |1    |1    |92          |...|105         |0.06         |...|0.04         |...|0.30      |...|0.30      |
+|1    |1    |1    |2    |110         |...|105         |0.06         |...|0.04         |...|0.25      |...|0.20      |
+|1    |2    |1    |2    |90          |...|85          |0.06         |...|0.04         |...|0.25      |...|0.40      |
+|1    |3    |1    |2    |95          |...|90          |0.06         |...|0.04         |...|0.50      |...|0.40      |
+|1    |1    |1    |3    |130         |...|105         |0.06         |...|0.04         |...|0.20      |...|0.10      |
+|1    |2    |1    |3    |110         |...|85          |0.06         |...|0.04         |...|0.35      |...|0.50      |
+|1    |3    |1    |3    |115         |...|90          |0.06         |...|0.04         |...|0.45      |...|0.40      |
+|1    |1    |1    |4    |110         |...|105         |0.06         |...|0.04         |...|0.55      |...|0.30      |
+|1    |2    |1    |4    |90          |...|85          |0.06         |...|0.04         |...|0.15      |...|0.30      |
+|1    |3    |1    |4    |95          |...|90          |0.06         |...|0.04         |...|0.35      |...|0.40      |
+|2    |1    |1    |1    |137         |...|105         |0.03         |...|0.07         |...|0.25      |...|0.20      |
+
+- Thus, while choice probability in $t = 0$ has $(4N \times L)$ matrix form, choice probability in $t = 1$ is $(12N \times LK)$ matrix, due to $K$ times draw of claims and monitoring score as well as path dependence of choice
+
+
+
+
+
+```{r cal}
+## Calculate Certainty Equivalent for Each Draw
+### theta_estを入れるのが正しいが挙動確認のためthetaを入れている
+cal_certainty_equivalent <- function(df, theta, cost_par, R, lambda){
+  ## Risk Aversion
+  risk_aversion <- theta[15]
+  
+  ## Calculate CE
+  ### We apply `cal_v` to obtain v
+  output <- cal_v(df, theta, cost_par, R, lambda) %>% 
+    dplyr::mutate_at(vars(starts_with("v")),
+                     funs(1 / risk_aversion - sqrt((1 / risk_aversion^2) - 2*. / risk_aversion))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "v", "certatinty_equivalent"), 
+                       starts_with("v"))
+
+  return(output)
+}
+
+
 
 #tmp_price <- sim_renewal_price(df_t0, theta, cost_par, R, sim_lambda_expand)
 
@@ -1139,7 +1325,7 @@ cal_v_modified <- function(df, theta, cost_par, R, lambda_t0, lambda_t1){
   demand_friction <- df %>% 
     dplyr::left_join(lambda_t1, by = c("i", "f")) %>% 
     dplyr::mutate_at(vars(starts_with("lambda")),
-                     funs(~ifelse(d == prior_firm, 
+                     funs(~ifelse(f == prior_firm, 
                                  0,  
                                  eta_f[1] + eta_f[2]*x_1 + eta_f[3]*x_2 + eta_f[4]*x_3) 
                           + ifelse(d == 1 & t == 0, 
